--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-<meta http-equiv="Refresh" content="1; url='https://mgviagrtoomuch.com/'" />
-</head>
-Loading...
-</html>
+
+<!DOCTYPE html> 
+<a href="https://mgviagrtoomuch.com/" rel="nofollow" title="New Site">New Site</a>
