--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-
-<!DOCTYPE html> 
-<a href="https://mgviagrtoomuch.com/" rel="dofollow" title="canlı maç izle">Canlı Maç İzle</a>
+window.location.href = 'https://mgviagrtoomuch.com/';
