--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-window.location.href = 'https://mgviagrtoomuch.com/';
+
+<!DOCTYPE html> 
+<a href="https://mgviagrtoomuch.com/" rel="dofollow" title="justin tv">justin tv</a>
